--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Brigs Dean's BYUI wdd130 home page">
         <meta name="author" content="Brigs Dean">
         <link rel="stylesheet" href="styles/quiz.css"> 
-        <title>Brigs Dean | Wdd130 130 | .html and .css online quiz</title>
+        <title>Brigs Dean  Wdd130 130  .html and .css online quiz</title>
     </head>
     <body>
         <header>
@@ -23,7 +23,7 @@
                         </div>
                         <div class="form-item1">                           
                             <label>
-                               2. What are the elements of an html file?                            
+                               2. What are 3 image types supported in an html file?                            
                             <textarea id="q2" name="q2" rows="3"></textarea>
                             </label>                       
                         </div>
@@ -41,16 +41,16 @@
                         </div>
                         <div class="form-items2">                        
                             <label>
-                             4. In CSS,how wide in pixels is an element with content of 100 pixels, border of 1 pixel all around, padding and margin of 10 pixels all around?
+                             4. At this point the number of .css files you should have in the course is?
                             </label>
                             <input type="number" id="q4" name="q4" step="1">                                
                         </div>
                     </fieldset>                                                          
-                        <button type="submit">Submit Quiz</button>                                         
+                        <button type="submit">submit quiz</button>                                         
                 </form>
             </main>
         <footer>
-            <p>©2024⚡HTML and CSS - Online activity quiz⚡Brigs Dean</p>
+            <p>©2024 HTML and CSS , Online activity quiz Brigs Dean</p>
         </footer>
     </body>
 </html>          
