--- a/quiz.html
+++ b/quiz.html
@@ -54,3 +54,5 @@
         </footer>
     </body>
 </html>          
+
+<!-- was struggling to come up with questions so i took some inspiration from some of the quizes we took in the past-->
