--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
     <meta name="author" content="Brigs Dean">
-    <link rel="stylesheet" href="styles/about.css">
-    <title>Mean Rafting Dean About Us</title>
+    <link rel="stylesheet" href="styles/contact.css">
+    <title>contact Mean Rafting Dean</title>
 </head>
 
 <body>
