--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -11,78 +11,87 @@
 </head>
 
 <body>
-    <header class="aboutHeader">
-        <img src="images/logo.png" alt="Mean Dean Rafting Site Logo" class="logo">
-        <nav class="aboutNavbar">
-            <a href="index.html">Home</a>
-            <a href="./about.html">About Us</a>
-            <a href="./trips.html">Trips</a>
-            <a href="./contact.html">Contact Us</a>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero">
-            <img src="images/logo.png" alt="Logo image" class="background-image">
-            <h1>Mean Dean Rafting</h1>
-            <div class="moto">
-                <img src="../wwr/images/customer.png" alt="Happy customer">
-                <p>
-                    Navigate the Rapids, Ride the Thrills: extreme Adventure Awaits! <br>
-                </p>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="./index.html">
+                <img class="logo" src="./images/logo.png" alt="Whitewater Rafting Logo" />
+            </a>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./rivers.html">Rivers</a>
+                <a href="./site-plan-rafting.html">Site Plan</a>
+                <a href="./contactus.html">Contact Us</a>
+            </nav>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="./images/hero.png" alt="People enjoying white water rafting" />
             </div>
-        </section>
+            <section id="hero-msg">
+                <h1 class="home-title">Contact Us</h1>
+                <h4>Make Memories with Dry Oar</h4>
+                <div class="button-box">
+                    <a class="book" href="./contactus.html">Book Now</a>
+                </div>
+            </section>
+        </div>
+        <main class="home-grid">
+            <div id="feedback"></div>
 
-        <section class="history">
-            <h2>History</h2>
-            <div class="historyContent">
-                <p>
-                    Mean Dean Rafting was founded in 2001 after our founder
-                    Throckmorton Dean was given $20 to let some college kids ride a barrel down An as of yet 
-                    unknown river with a waterfall suprise at the end!
-                </p>
-                <img src="../wwr/images/raftinghistory.jpg" alt="Definitly not ai generated art">
-                <p>
-                    With 30+ (legal) locations we know we will have the thills you seek in atleast.
-                    one of our locations!
-                </p>
+            <form action="/my-handling-form-page" method="post">
+                <ul>
+                    <li>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="user_name" />
+                    </li>
+                    <li>
+                        <label for="mail">Email:</label>
+                        <input type="email" id="mail" name="user_email" />
+                    </li>
+                    <li>
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" name="user_message"></textarea>
+                    </li>
+                    <li class="button">
+                        <button type="submit">Send your message</button>
+                    </li>
+                </ul>
+            </form>
+        </main>
+        <footer>
+            <p>Dry Oar &copy; 2023 - Vern Wolfley</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="./contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="./images/facebook.png" alt="fb icon" />
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="./images/twitter.png" alt="twitter icon" />
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="./images/instagram.png" alt="instagram icon" />
+                </a>
             </div>
-        </section>
-
-        <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <figure>
-                <img src="images/river.png" alt="river 1 ">
-                <figcaption>Super Danger Creek</figcaption>
-            </figure>
-            <figure>
-                <img src="images/river2.png" alt="river 2">
-                <figcaption>Big Dean's Beginner thrill </figcaption>
-            </figure>
-            <figure>
-                <img src="images/river3.png" alt="river 2">
-                <figcaption>The Throngler </figcaption>
-            </figure>
-        </section>
-
-    </main>
-
-    <footer>
-        <p>©️ 2024 Brigs Dean - Mean Dean Rafting - WDD130 // <a href="./images/wfabout.png">Wireframe</a></p>
-        <nav class="sociallinks">
-            <a href="https://www.facebook.com" target="_blank">
-                <img src="./images/facebook.webp" alt="Facebook">
-            </a>
-
-            <a href="https://www.twitter.com" target="_blank">
-                <img src="./images/twitter.webp" alt=" X (formally twitter)">
-            </a>
-
-            <a href="https://www.instagram.com" target="_blank">
-                <img src="./images/instagram.webp" alt="Instagram">
-            </a>
-        </nav>
-    </footer>
+        </footer>
+    </div>
+    <script>
+        // get the feedback div element so we can do something with it.
+        const feedbackElement = document.getElementById("feedback");
+        // get the form so we can read what was entered in it.
+        const formElement = document.forms[0];
+        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+        formElement.addEventListener("submit", function (e) {
+            // stop the form from doing the default action.
+            e.preventDefault();
+            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
+            feedbackElement.innerHTML =
+                "Hello " + formElement.user_name.value + "! Thank you for your message. We will get back with you as soon as possible!";
+            // make the feedback element visible.
+            feedbackElement.style.display = "block";
+            // add a class to move everything down so our message doesn't cover it.
+            document.body.classList.toggle("moveDown");
+        });
+    </script>
 </body>
-
 </html>
