--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,10 +17,10 @@
                 <img class="logo" src="./images/logo.png" alt="Whitewater Rafting Logo" />
             </a>
             <nav>
-                <a href="./index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="./rivers.html">Rivers</a>
                 <a href="./site-plan-rafting.html">Site Plan</a>
-                <a href="./contactus.html">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
