--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,7 +14,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="./index.html">
-                <img class="logo" src="./images/logo.png" alt="Whitewater Rafting Logo" />
+                <img class="logo" src="./images/logo.png" alt="Mean Dean logo" />
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -64,13 +64,13 @@
             <p><a href="./contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="./images/facebook.png" alt="fb icon" />
+                    <img src="./images/facebook.webp" alt="fb icon" />
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="./images/twitter.png" alt="twitter icon" />
+                    <img src="./images/twitter.webp" alt="X (formally twitter) icon" />
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="./images/instagram.png" alt="instagram icon" />
+                    <img src="./images/instagram.webp" alt="instagram icon" />
                 </a>
             </div>
         </footer>
