--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -53,7 +53,7 @@
                 <a href="https://brigsdean.github.io/wdd130/">Home Page</a>
                 <a href="about.html">About Us</a>
                 <a href="#">Trips</a>
-                <a href="#">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         
         <h2>Wireframes</h2>
