--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -67,7 +67,7 @@
                     <img src="./images/facebook.webp" alt="fb icon" />
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="./images/twitter.webp" alt="X (formally twitter) icon" />
+                    <img src="/images/twitter.webp" alt="X (formally twitter) icon" />
                 </a>
                 <a href="https://instagram.com" target="_blank">
                     <img src="./images/instagram.webp" alt="instagram icon" />
