--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -59,7 +59,7 @@
             </form>
         </main>
         <footer>
-            <p>Dry Oar &copy; 2023 - Vern Wolfley</p>
+            <p>Mean Dean Rafting &copy; 2024 - Brigs Dean</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="./contactus.html">Contact Us</a></p>
             <div class="social">
