--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
     <meta name="author" content="Brigs Dean">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <title>Contact Mean Dean Rafting</title>
 </head>
 
