--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -31,7 +31,7 @@
                 <h1 class="home-title">Contact Us</h1>
                 <h4>Make Memories with Dry Oar</h4>
                 <div class="button-box">
-                    <a class="book" href="./contactus.html">Book Now</a>
+                    <a class="book" href="contact.html">Book Now</a>
                 </div>
             </section>
         </div>
