--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -88,3 +88,5 @@
     </script>
 </body>
 </html>
+
+<!-- will update tomorrow just found out my mission companion is coming home today so i gotta see him-->
