--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,92 +1,141 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Us page">
-    <meta name="author" content="Brigs Dean">
-    <link rel="stylesheet" href="styles/rafting.css">
-    <title>Contact Mean Dean Rafting</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Cameron Weller's contact us page for the web dev class">
+      <meta name="author" content="Cameron Weller">
+      <title>Cameron Weller | WDD 130 | Contact Us Page</title>
+      <link rel="stylesheet" href="styles/about.css">
 </head>
 
-<body>
-    <div id="content">
-        <header>
-            <a id="logo_link" href="./index.html">
-                <img class="logo" src="./images/logo.png" alt="Mean Dean logo" />
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="./rivers.html">Rivers</a>
-                <a href="./site-plan-rafting.html">Site Plan</a>
-                <a href="contact.html">Contact Us</a>
-            </nav>
-        </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="/wwr/images/customer.png" alt="one of our customers enjoying the ride!" />
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Contact Us</h1>
-                <h4>Make Memories with Dry Oar</h4>
-                <div class="button-box">
-                    <a class="book" href="contact.html">Book Now</a>
-                </div>
-            </section>
-        </div>
-        <main class="home-grid">
-            <div id="feedback"></div>
+<body> 
+   <header>
+      <nav>
+         <img src="images/logo.jpg" alt="logo" width="60">
+         <a href="../index.html">Home</a>
+         <a href="about.html">About Us</a>
+         <a href="index.html">Rafting Website</a>
+         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+         <a href="../index.html">My Homepage</a>
+         <a href="trips.html">Trips</a>
+         <a href="contact.html">Contact Us</a>
+      </nav>
 
-            <form action="/my-handling-form-page" method="post">
-                <ul>
-                    <li>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name" />
-                    </li>
-                    <li>
-                        <label for="mail">Email:</label>
-                        <input type="email" id="mail" name="user_email" />
-                    </li>
-                    <li>
-                        <label for="msg">Message:</label>
-                        <textarea id="msg" name="user_message"></textarea>
-                    </li>
-                    <li class="button">
-                        <button type="submit">Send your message</button>
-                    </li>
-                </ul>
-            </form>
-        </main>
-        <footer>
-            <p>Mean Dean Rafting &copy; 2024 - Brigs Dean</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="./contactus.html">Contact Us</a></p>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="./images/facebook.webp" alt="fb icon" />
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="" alt="X (formally twitter) icon" />
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="./images/instagram.webp" alt="instagram icon" />
-                </a>
-            </div>
-        </footer>
-    </div>
-    <script>
-        const feedbackElement = document.getElementById("feedback");
-        const formElement = document.forms[0];
-        formElement.addEventListener("submit", function (e) {
-            e.preventDefault();
-            feedbackElement.innerHTML =
-                "Hello " + formElement.user_name.value + "! Thank you for your message. We will get back with you as soon as possible!";
-            feedbackElement.style.display = "block";
-            document.body.classList.toggle("moveDown");
-        });
-    </script>
+   </header>
+
+<main>
+  
+   <h1>3 Quarters rafting contact form and info</h1><br>
+   
+
+   <section>
+      <h2>
+         Contact Us
+      </h2>
+      <p>
+         3 Quarters rafting is located in the heart of the Rocky Mountains, in the beautiful state of Colorado. If you have any questions or would like to book a trip, please contact us using the information below.
+      </p><br>
+
+      <p>
+         Phone: 1-800-555-1234<br>
+         Email:madeupemail.com
+      </p> <br>
+
+      <p>
+         Address: 1234 River Rd, Denver, CO 80202
+      </p><br>
+
+      <p>Find us In person !</p><br>
+   </section>
+
+   
+   <h3>Get To Know Our Employees</h3>
+   <section class="employees">
+      <figure>
+         <img src="images/employee1.jpg" alt="Employee 1" width="200" height="200"> 
+         <figcaption>This is Emil, hes the Goat</figcaption>
+      </figure>
+      <figure>
+         <img src="images/employee2.jpg" alt="Employee 2" width="200" height="200">
+         <figcaption>This is Sarah, She shreds customer complaints to bits</figcaption>
+      </figure>
+      <figure>
+         <img src="images/employee3.jpg" alt="Employee 3" width="200" height="200">
+         <figcaption>This is Bora, She takes long walks in the park</figcaption>
+      </figure>
+      <figure>
+         <img src="images/ceo.jpg" alt="CEO" width="200" height="200">
+         <figcaption>This is our CEO, he is a very busy and handsome</figcaption>
+      </figure>
+      <!-- <img src="images/employee1.jpg" alt="Employee 1" width="200"> 
+      <caption for="employee1">This is Emil, hes the Goat</caption>
+      <img src="images/employee2.jpg" alt="Employee 2" width="200">
+      <caption>This is Sarah, She shreds customer complaints to bits</caption>
+      <img src="images/employee3.jpg" alt="Employee 3" width="200">
+      <caption>This is Bora, She takes long walks in the park</caption>
+      <img src="images/ceo.jpg" alt="CEO" width="200">
+      <caption>This is our CEO, he is a very busy and handsome</caption> -->
+   </section><br>
+
+   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d44426.483761326235!2d-106.7709137563631!3d38.94987015986077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1716674855870!5m2!1sen!2sus" width="650" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <form> 
+      <section id="personalid">
+      <label for="name">Name:</label><br>
+      <input type="text" id="name" name="name"><br>
+
+      <label for="email">Email:</label><br>
+      <input type="text" id="email" name="email"><br>
+      </section>
+
+      <section id="inquiry">
+         <section>
+            <input type="radio" id="general" name="inquiry" value="General Inquiry">
+            <label for="general">General Inquiry</label><br>
+         </section>
+
+         <section>
+            <input type="radio" id="reservation" name="inquiry" value="Reservation Question">
+            <label for="reservation">Reservation Question</label><br>
+         </section>
+
+         <section>
+            <input type="radio" id="suggestion" name="inquiry" value="Website Suggestion">
+            <label for="suggestion">Website Suggestion</label><br>
+         </section>
+      </section>
+
+      <label for="message">Message:</label><br>
+      <textarea id="message" name="message"></textarea><br>
+
+      <input type="checkbox" id="subscribe" name="subscribe" value="Subscribe">
+      <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
+
+      <input type="submit" value="Submit Feed Back or Questions!" id="submit" name="submit">
+      <label for="submit">Submit Feed Back or Questions!</label>
+    </form>
+</main>
+
+   <footer> 
+      <!-- How to select these as a group, what are the parent/child/flow relationships ? -->
+      <p>©️ Cameron Weller, United States of America, 2024</p>
+      <nav>
+      <a href="instagram.com" class="token">
+         <img src="images/socials/insta.png" alt="Instagram" width="50">
+      </a>
+      <a href="facebook.com" class="token">
+         <img src="images/socials/facebook.webp" alt="Facebook" width="50"> 
+      </a>
+      <a href="reddit.com" class="token">
+         <img src="images/socials/reddit.png" alt="Reddit" width="50">
+      </a>
+      </nav>
+
+   </footer>
+
+   <a href="https://app.moqups.com/DMpxsA63LmQ4xKlMWOB65HKUuagrCEGS/view/page/ad64222d5">&lt;&lt;&lt;&lt;&lt;&lt;Moqup link&gt;&gt;&gt;&gt;&gt;&gt;&gt;</a>
+
 </body>
-</html>
 
-<!-- will update tomorrow just found out my mission companion is coming home today so i gotta see him-->
+</html>
