--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,17 +3,17 @@
 <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Cameron Weller's contact us page for the web dev class">
-      <meta name="author" content="Cameron Weller">
-      <title>Cameron Weller | WDD 130 | Contact Us Page</title>
+      <meta name="description" content="Brigs Dean's contact us page for the web dev class">
+      <meta name="author" content="Brigs Dean">
+      <title>Brigs Dean | WDD 130 | Contact Us Page</title>
       <link rel="stylesheet" href="styles/about.css">
 </head>
 
 <body> 
    <header>
       <nav>
-         <img src="images/logo.jpg" alt="logo" width="60">
-         <a href="../index.html">Home</a>
+         <img src="images/logo.png" alt="logo" width="60">
+         <a href="/index.html">Home</a>
          <a href="about.html">About Us</a>
          <a href="index.html">Rafting Website</a>
          <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
@@ -26,7 +26,7 @@
 
 <main>
   
-   <h1>3 Quarters rafting contact form and info</h1><br>
+   <h1>Mean Dean Rafting  info</h1><br>
    
 
    <section>
@@ -34,7 +34,7 @@
          Contact Us
       </h2>
       <p>
-         3 Quarters rafting is located in the heart of the Rocky Mountains, in the beautiful state of Colorado. If you have any questions or would like to book a trip, please contact us using the information below.
+         Mean Dean Rafting is located in the heart of the Rocky Mountains, in the beautiful state of Colorado. If you have any questions or would like to book a trip, please contact us using the information below.
       </p><br>
 
       <p>
@@ -68,14 +68,7 @@
          <img src="images/ceo.jpg" alt="CEO" width="200" height="200">
          <figcaption>This is our CEO, he is a very busy and handsome</figcaption>
       </figure>
-      <!-- <img src="images/employee1.jpg" alt="Employee 1" width="200"> 
-      <caption for="employee1">This is Emil, hes the Goat</caption>
-      <img src="images/employee2.jpg" alt="Employee 2" width="200">
-      <caption>This is Sarah, She shreds customer complaints to bits</caption>
-      <img src="images/employee3.jpg" alt="Employee 3" width="200">
-      <caption>This is Bora, She takes long walks in the park</caption>
-      <img src="images/ceo.jpg" alt="CEO" width="200">
-      <caption>This is our CEO, he is a very busy and handsome</caption> -->
+
    </section><br>
 
    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d44426.483761326235!2d-106.7709137563631!3d38.94987015986077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1716674855870!5m2!1sen!2sus" width="650" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -118,17 +111,16 @@
 </main>
 
    <footer> 
-      <!-- How to select these as a group, what are the parent/child/flow relationships ? -->
-      <p>©️ Cameron Weller, United States of America, 2024</p>
+      <p>©️ Brigs Dean, United States of America, 2024</p>
       <nav>
       <a href="instagram.com" class="token">
-         <img src="images/socials/insta.png" alt="Instagram" width="50">
+         <img src="images/instagram.webp" alt="Instagram" width="50">
       </a>
       <a href="facebook.com" class="token">
-         <img src="images/socials/facebook.webp" alt="Facebook" width="50"> 
+         <img src="images/facebook.webp" alt="Facebook" width="50"> 
       </a>
-      <a href="reddit.com" class="token">
-         <img src="images/socials/reddit.png" alt="Reddit" width="50">
+      <a href="twitter.com" class="token">
+         <img src="images/twitter.webp" alt="X (formaly twitter)" width="50">
       </a>
       </nav>
 
