--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
 
 <main>
   
-   <h1>Mean Dean Rafting  info</h1><br>
+   <h1>Mean Dean Rafting info</h1><br>
    
 
    <section>
@@ -34,16 +34,16 @@
          Contact Us
       </h2>
       <p>
-         Mean Dean Rafting is located in the heart of the Rocky Mountains, in the beautiful state of Colorado. If you have any questions or would like to book a trip, please contact us using the information below.
+         Mean Dean Rafting is Headquarters moves frequently however our current location is In Alaska
       </p><br>
 
       <p>
          Phone: 1-800-555-1234<br>
-         Email:madeupemail.com
+         Email:fakemail.lol
       </p> <br>
 
       <p>
-         Address: 1234 River Rd, Denver, CO 80202
+         Address: 1111 secret rd, Alaska,
       </p><br>
 
       <p>Find us In person !</p><br>
@@ -53,20 +53,16 @@
    <h3>Get To Know Our Employees</h3>
    <section class="employees">
       <figure>
-         <img src="images/employee1.jpg" alt="Employee 1" width="200" height="200"> 
-         <figcaption>This is Emil, hes the Goat</figcaption>
+         <img src="images/customer.png" alt="Employee 1" width="200" height="200"> 
+         <figcaption>This photo was taken by John Doe he has requested we dont provide his image on the basis that quote "They dont find him"</figcaption>
       </figure>
       <figure>
          <img src="images/employee2.jpg" alt="Employee 2" width="200" height="200">
          <figcaption>This is Sarah, She shreds customer complaints to bits</figcaption>
       </figure>
       <figure>
-         <img src="images/employee3.jpg" alt="Employee 3" width="200" height="200">
-         <figcaption>This is Bora, She takes long walks in the park</figcaption>
-      </figure>
-      <figure>
-         <img src="images/ceo.jpg" alt="CEO" width="200" height="200">
-         <figcaption>This is our CEO, he is a very busy and handsome</figcaption>
+         <img src="images/me.png" alt="CEO" width="200" height="200">
+         <figcaption>This is our CEO</figcaption>
       </figure>
 
    </section><br>
