--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -43,7 +43,7 @@
       </p> <br>
 
       <p>
-         Address: 1111 secret rd, Alaska,
+         current Address: 1111 secret rd, Alaska,
       </p><br>
 
       <p>Find us In person !</p><br>
@@ -57,8 +57,8 @@
          <figcaption>This photo was taken by John Doe he has requested we dont provide his image on the basis that quote "They dont find him"</figcaption>
       </figure>
       <figure>
-         <img src="images/employee2.jpg" alt="Employee 2" width="200" height="200">
-         <figcaption>This is Sarah, She shreds customer complaints to bits</figcaption>
+         <img src="images/potential_employee.png" alt="Employee 2" width="200" height="200">
+         <figcaption>This is Johnny Depp from the Pirates of the Carribean movies he isnt an employee yet but soon hopefully!</figcaption>
       </figure>
       <figure>
          <img src="images/me.png" alt="CEO" width="200" height="200">
@@ -94,13 +94,8 @@
             <label for="suggestion">Website Suggestion</label><br>
          </section>
       </section>
-
       <label for="message">Message:</label><br>
       <textarea id="message" name="message"></textarea><br>
-
-      <input type="checkbox" id="subscribe" name="subscribe" value="Subscribe">
-      <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
-
       <input type="submit" value="Submit Feed Back or Questions!" id="submit" name="submit">
       <label for="submit">Submit Feed Back or Questions!</label>
     </form>
